// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductImage /> It should increment the count 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`<ProductImage /> It should render successfully the component 1`] = `
<div
  className="productCard undefined"
>
  <h1>
     Product Card 
  </h1>
</div>
`;
